updated R-squared and some plots

--- a/california-housing-xai.ipynb
+++ b/california-housing-xai.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO3vnNzUm8HwI92n7nV0cEX",
+      "authorship_tag": "ABX9TyM1K7gL8XuGcs8Qu5WJw7Bo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,7 @@
         "* Από το **datasets** εισάγουμε το **fetch_california_housing**, ώστε να πάρουμε το εν λόγω **dataset**.\n",
         "* Από τα **metrics** εισάγουμε:\n",
         "  * το **mean_squared_error**, για να υπολογίσουμε το **μέσο τετραγωνικό σφάλμα** της πρόβλεψης του μοντέλου μας, και\n",
-        "  * το **r2_score** για να υπολογίσουμε την μετρική **R2-squared** του μοντέλου μας.\n"
+        "  * το **r2_score** για να υπολογίσουμε την μετρική **R-squared** του μοντέλου μας.\n"
       ],
       "metadata": {
         "id": "x6rBh7cVtUVU"
@@ -285,12 +285,12 @@
         "    plt.show()"
       ],
       "metadata": {
-        "id": "oYHHqMA01a_7",
-        "outputId": "0dadaf52-d7da-4774-e668-7bcf64476e2a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "oYHHqMA01a_7",
+        "outputId": "0dadaf52-d7da-4774-e668-7bcf64476e2a"
       },
       "execution_count": 46,
       "outputs": [
@@ -511,12 +511,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "fLu0mgdxiM0H",
-        "outputId": "66f841bf-c995-492c-da0b-ee4752c72f21",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 334
-        }
+        },
+        "id": "fLu0mgdxiM0H",
+        "outputId": "66f841bf-c995-492c-da0b-ee4752c72f21"
       },
       "execution_count": 16,
       "outputs": [
@@ -608,11 +608,11 @@
         "df.info()"
       ],
       "metadata": {
-        "id": "9wFmJg08zwFY",
-        "outputId": "2378982b-991e-49c1-a061-284c737a86ac",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "9wFmJg08zwFY",
+        "outputId": "2378982b-991e-49c1-a061-284c737a86ac"
       },
       "execution_count": 75,
       "outputs": [
@@ -646,12 +646,12 @@
         "df_histplot = df.hist(grid=False, figsize=(25, 25), color='#7600BC', zorder=2, rwidth=0.95)"
       ],
       "metadata": {
-        "id": "MczKWnmEz1Ty",
-        "outputId": "aa0e9607-032c-421a-9fb0-a29c3bd63c21",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "MczKWnmEz1Ty",
+        "outputId": "aa0e9607-032c-421a-9fb0-a29c3bd63c21"
       },
       "execution_count": 76,
       "outputs": [
@@ -675,12 +675,12 @@
         "df.describe().T"
       ],
       "metadata": {
-        "id": "6-TTDaTr0sY2",
-        "outputId": "94ac6d8b-e8d7-4826-9778-f95a34568ea5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 332
-        }
+        },
+        "id": "6-TTDaTr0sY2",
+        "outputId": "94ac6d8b-e8d7-4826-9778-f95a34568ea5"
       },
       "execution_count": 77,
       "outputs": [
@@ -935,11 +935,11 @@
         "corr_df['price']"
       ],
       "metadata": {
-        "id": "ACaexAEH4axV",
-        "outputId": "aab4ed3c-1115-455d-b99d-b15f6c43f640",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ACaexAEH4axV",
+        "outputId": "aab4ed3c-1115-455d-b99d-b15f6c43f640"
       },
       "execution_count": 78,
       "outputs": [
